tests/checker/fail/literal_dispatch_kind_mismatch.can
Described = (Int) => String {
    Int -> (
        * "zero" => String { "zero" }
        * Int => String { "many" }
    )
}

Unit => Program {
    0 -> Described -> Print
}
